
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


typedef int u8 ;
typedef int u16 ;
struct net_device {int dummy; } ;
struct TYPE_3__ {int (* read ) (struct e1000_hw*,int,int,int*) ;} ;
struct TYPE_4__ {scalar_t__ type; TYPE_1__ ops; } ;
struct e1000_hw {int vendor_id; int device_id; TYPE_2__ nvm; } ;
struct igb_adapter {struct e1000_hw hw; } ;
struct ethtool_eeprom {int magic; int offset; int len; } ;


 int EINVAL ;
 int ENOMEM ;
 int GFP_KERNEL ;
 scalar_t__ e1000_nvm_eeprom_spi ;
 int kfree (int*) ;
 int* kmalloc (int,int ) ;
 int le16_to_cpus (int*) ;
 int memcpy (int *,int *,int ) ;
 struct igb_adapter* netdev_priv (struct net_device*) ;
 int stub1 (struct e1000_hw*,int,int,int*) ;
 int stub2 (struct e1000_hw*,int,int,int*) ;

__attribute__((used)) static int igb_get_eeprom(struct net_device *netdev,
     struct ethtool_eeprom *eeprom, u8 *bytes)
{
 struct igb_adapter *adapter = netdev_priv(netdev);
 struct e1000_hw *hw = &adapter->hw;
 u16 *eeprom_buff;
 int first_word, last_word;
 int ret_val = 0;
 u16 i;

 if (eeprom->len == 0)
  return -EINVAL;

 eeprom->magic = hw->vendor_id | (hw->device_id << 16);

 first_word = eeprom->offset >> 1;
 last_word = (eeprom->offset + eeprom->len - 1) >> 1;

 eeprom_buff = kmalloc(sizeof(u16) *
   (last_word - first_word + 1), GFP_KERNEL);
 if (!eeprom_buff)
  return -ENOMEM;

 if (hw->nvm.type == e1000_nvm_eeprom_spi)
  ret_val = hw->nvm.ops.read(hw, first_word,
        last_word - first_word + 1,
        eeprom_buff);
 else {
  for (i = 0; i < last_word - first_word + 1; i++) {
   ret_val = hw->nvm.ops.read(hw, first_word + i, 1,
         &eeprom_buff[i]);
   if (ret_val)
    break;
  }
 }


 for (i = 0; i < last_word - first_word + 1; i++)
  le16_to_cpus(&eeprom_buff[i]);

 memcpy(bytes, (u8 *)eeprom_buff + (eeprom->offset & 1),
   eeprom->len);
 kfree(eeprom_buff);

 return ret_val;
}
